force-app/main/default/objects/SBQQ__ProductFeature__c/fields/FeatureId__c.field-meta.xml
<CustomField>
    <fullName>FeatureId__c</fullName>
    <externalId>true</externalId>
    <label>Feature Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>