force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__Category__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Category__c</fullName>
    <description>Category of options in this feature. Allows for another level of grouping.</description>
    <inlineHelpText>Assign this feature to a category such that multiple features with related options are grouped together.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Hardware</fullName><default>false</default><label>Hardware</label></value>
            <value><fullName>Software</fullName><default>false</default><label>Software</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>