force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__DynamicProductLookupFieldSet__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DynamicProductLookupFieldSet__c</fullName>
    <description>The API name of the field set that will be used when viewing dynamic options for this feature during configuration.</description>
    <inlineHelpText>The API name of the field set that will be used when viewing dynamic options for this feature during configuration.</inlineHelpText>
    <label>Dynamic Option Lookup Field Set</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>ConfiguratorLookup</fullName><default>false</default><label>ConfiguratorLookup</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>