force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__OptionSelectionMethod__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OptionSelectionMethod__c</fullName>
    <description>Determines how user selects options attached to this product. &quot;Click&quot; method presents options with checkboxes next to them. &quot;Add&quot; renders a button which brings up predefined options. &quot;Dynamic&quot; renders a button which brings up all active products.</description>
    <inlineHelpText>Determines how user selects options attached to this product. &quot;Click&quot; method presents options with checkboxes next to them. &quot;Add&quot; renders a button which brings up predefined options. &quot;Dynamic&quot; renders a button which brings up all active products.</inlineHelpText>
    <label>Option Selection Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Click</fullName><default>false</default><label>Click</label></value>
            <value><fullName>Add</fullName><default>false</default><label>Add</label></value>
            <value><fullName>Dynamic</fullName><default>false</default><label>Dynamic</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>